SCRUM-59 Настройка тестов.